finished html section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Learning HTML</title>
   </head>
   <body>
-    Hello, World!
+    <a href="02_headings_list.html" target="_blank" rel="noopener noreferrer">
+      hi
+    </a>
+
+    <a href="03_tables.html" target="_blank" rel="noopener noreferrer"> 03 </a>
+
+    <h1>Hello, World!</h1>
   </body>
 </html>
